add more configuration options.